--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: v0.3
 
       - uses: actions/upload-artifact@v3
         with:
