--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -16,9 +16,11 @@ jobs:
 
     runs-on: ${{ matrix.os }}
     steps:
+
+      - run: git switch v0.3
+        shell: bash
+
       - uses: actions/checkout@v3
-        with:
-          ref: v0.3
 
       - uses: actions/upload-artifact@v3
         with:
