--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -39,7 +39,7 @@ jobs:
       - uses: milankomaj/releases-x@v0.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          target: v0.3
+          target: master
           title: relase
           tag: v0.2
           rewrite: true
