--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -41,6 +41,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           target: master
           title: relase
+          rewrite: true
           files: |
            ${{ github.workspace }}/.github/workflows/*.yml \
            ${{ github.workspace }}/*.yml
