--- a/.github/workflows/gh-cli.yml
+++ b/.github/workflows/gh-cli.yml
@@ -67,3 +67,10 @@ jobs:
          gh release delete ${{ env.last_relase }} --cleanup-tag --yes
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: gh api repos/${{ github.repository }}/releases
+        continue-on-error: true
+        run: |
+         gh api repos/${{ github.repository }}/releases --jq length
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
