--- a/action.yml
+++ b/action.yml
@@ -70,14 +70,14 @@ runs:
     - name: api
       id: api
       run: |
-       api=$(gh api repos/${{ github.repository }}/releases)
+       api=$(gh api repos/${{ github.repository }}/releases --jq length)
        echo "api=$(echo $api)" >> $GITHUB_ENV
        echo ${{ env.api }}
       shell: bash
 
     - name: view
       id: view
-      if: env.api  != '[]'
+      if: env.api != '0'
       run: |
         gh release view
         last_relase=$(gh release view --json tagName --jq .tagName)
@@ -87,7 +87,7 @@ runs:
 
     - name: rewrite
       id: rewrite
-      if: inputs.rewrite == 'true' && env.api != '[]'
+      if: inputs.rewrite == 'true' && env.api != '0'
       run: gh release delete ${{ env.last_relase }} --cleanup-tag --yes
       shell: bash
 
