--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -12,8 +12,10 @@ jobs:
        os: [ubuntu-latest]
 
     runs-on: ${{ matrix.os }}
+    steps:
+    
       - uses: actions/checkout@v3
-      
+
       - uses: milankomaj/releases-x@v0.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
