--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 3
       matrix:
-       os: [windows-latest]
+       os: [ubuntu-latest, windows-latest, macos-latest]
 
     runs-on: ${{ matrix.os }}
     steps:
