--- a/.github/workflows/composite-test.yml
+++ b/.github/workflows/composite-test.yml
@@ -7,9 +7,9 @@ jobs:
     name: release create
     continue-on-error: false
     strategy:
-      max-parallel: 3
+      max-parallel: 1
       matrix:
-       os: [ubuntu-latest]
+       os: [ubuntu-latest, windows-latest, macos-latest]
 
     runs-on: ${{ matrix.os }}
     steps:
