--- a/action.yml
+++ b/action.yml
@@ -21,7 +21,7 @@ inputs:
   tag:  # id of input
     description: 'Use tag'
     required: false
-    default: v.0.${{ github.run_id }}-${{runner.os}}
+    default: v.0.${{ github.run_id }}.${{runner.os}}
   files:  # id of input
     description: 'Use files'
     required: false
